Reforçado fluxo de thumbnail e link preview
